Corrected CSS for 3 reasons. Spacing, Sizing, Margins, Font weight

--- a/css/styles.css
+++ b/css/styles.css
@@ -712,6 +712,8 @@ Three Reasons
 
 .reason {
     margin-bottom: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
     padding-bottom: 2em;
 	flex: 1;
 }
@@ -742,6 +744,7 @@ Three Reasons
 .content-title {
     margin-bottom: 0;
     font-size: 1.4em;
+    font-weight: bold;
 }
 
 .reason p {
